@@ -96,7 +96,7 @@ Util = exports || {};
         var lArg        = pArg,
             lConsole    = Scope.console,
             lDate       = '[' + Util.getDate() + '] ';
-                
+        
         if(lConsole && pArg)
             lConsole.log(lDate, lArg);
         
